[gd_scene load_steps=6 format=2]

[ext_resource path="res://grafika/worldElements/baner-shop.png" type="Texture" id=6]
[ext_resource path="res://grafika/worldElements/door.png" type="Texture" id=7]
[ext_resource path="res://skrypty/ShopDoor.gd" type="Script" id=11]
[ext_resource path="res://instances/Elements/Torch.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 32, 49.5 )

[node name="Door" type="Sprite"]
self_modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( -1665, 900 )
texture = ExtResource( 7 )
script = ExtResource( 11 )

[node name="ItemSlot1" type="Node2D" parent="."]
visible = false

[node name="ItemSlot2" type="Node2D" parent="."]
visible = false

[node name="ItemSlot3" type="Node2D" parent="."]
visible = false

[node name="Baner-shop" type="Sprite" parent="."]
position = Vector2( 1, -91 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.5 )
shape = SubResource( 44 )

[node name="Torch" parent="." instance=ExtResource( 13 )]
position = Vector2( 62, -24 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
